--- a/index.html
+++ b/index.html
@@ -49,20 +49,50 @@
         <div class="center"><img src='img/Bayes_Theorem_01.jpg' alt="Bayes' Theorem" width="800" height="auto"></div>
     </div>
 
-    <!-- http://oscarbonilla.com/2009/05/visualizing-bayes-theorem/ -->
-    <div class="step" data-x="1000" data-y="1000">                
+    <!-- http://oscarbonilla.com/2009/05/visualizing-bayes-theorem/ 
+         http://yudkowsky.net/rational/bayes -->
+    <div class="step" data-x="1000" data-y="1000" data-rotate="90">                
         <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
-        <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+         <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
          <g>
           <circle fill="#ffffff" stroke="#000000" stroke-width="5" cx="313.5" cy="243.50001" r="214.73531" id="svg_2"/>
-          <circle fill="#ff0000" stroke="#000000" stroke-width="5" cx="231" cy="305" r="38.28838" id="svg_3"/>
+          <circle stroke="#000000" fill="#ff0000" stroke-width="5" cx="230.49999" cy="307.00002" r="79.28837" id="svg_3" opacity="0.5"/>
           <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="318" x="230" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">A</text>
-          <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="250" x="315" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">U</text>
+          <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="152" x="311" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">U</text>
          </g>
         </svg>
         <!-- The default math delimiters are $$...$$ and \[...\] for displayed mathematics, and \(...\) for in-line mathematics.  -->
         <p class="center">$$P\left( A \right) =\frac { \left| A \right|  }{ \left| U \right|  }$$</p>
     </div>    
+
+    <div class="step" data-x="1000" data-y="2000" data-rotate="90">
+        <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
+         <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+         <g>
+          <circle id="svg_2" r="214.73531" cy="243.50001" cx="313.5" stroke-width="5" stroke="#000000" fill="#ffffff"/>
+          <circle id="svg_3" r="79.28837" cy="307.00002" cx="307.49999" stroke-width="5" fill="#007fff" stroke="#000000" opacity="0.5"/>
+          <text style="cursor: move;" fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="308" y="318" id="svg_5" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">B</text>
+          <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="311" y="152" id="svg_5" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">U</text>
+         </g>
+        </svg>
+        <p class="center">$$P\left( B \right) =\frac { \left| B \right|  }{ \left| U \right|  }$$</p>
+    </div>
+
+    <div class="step" data-x="1000" data-y="3000" data-rotate="90">
+        <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
+         <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+         <g>
+           <circle fill="#ffffff" stroke="#000000" stroke-width="5" cx="313.5" cy="243.50001" r="214.73531" id="svg_2"/>
+           <circle opacity="0.5" id="svg_3" r="79.28837" cy="307.00002" cx="230.49999" stroke-width="5" fill="#ff0000" stroke="#000000"/>
+           <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="185" y="318" id="svg_5" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">A</text>
+           <circle opacity="0.5" stroke="#000000" fill="#007fff" stroke-width="5" cx="307.49999" cy="307.00002" r="79.28837" id="svg_3"/>
+           <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="318" x="345" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">B</text>
+           <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="318" x="267" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">AB</text>
+           <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="152" x="311" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">U</text>
+         </g>
+        </svg>
+        <p class="center">$$P\left( AB \right) =\frac { \left| AB \right|  }{ \left| U \right|  }$$</p>
+    </div>
 
     <div id="text-classification" class="step" data-x="2000" data-y="0">
         <h1>Text classification</h1>
