Added back to home button

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     </div>    
 </div>
 
+<a href="#" onClick="api.goto('title');" class="backToHome">Back to home</a>
 <div class="navBox">
   <a href="#" onClick="api.prev();">prev</a>
   <a href="#" onClick="api.next();">next</a>
