--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
         <p class="center">$$P\left( AB \right) =\frac { \left| AB \right|  }{ \left| U \right|  }$$</p>
     </div>
 
+
+    <div class="step" data-x="0" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
+        <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
+         <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+         <g>
+          <title>Layer 1</title>
+          <circle stroke="#000000" fill="#ff0000" stroke-width="5" cx="239.49999" cy="245.00002" r="120" id="svg_3" opacity="0.5"/>
+          <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="265" x="186" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">A</text>
+          <circle id="svg_3" r="150" cy="245.00002" cx="394.49999" stroke-width="5" fill="#007fff" stroke="#000000" opacity="0.5"/>
+          <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="429" y="265" id="svg_5" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">B</text>
+          <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="301" y="265" id="svg_5" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">AB</text>
+         </g>
+        </svg>
+        <p class="center">$$P\left( { A }|{ B } \right) =\frac { \left| AB \right|  }{ \left| B \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| B \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( B \right)  }$$
+          $$P\left( { B }|{ A } \right) =\frac { \left| AB \right|  }{ \left| A \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| A \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( A \right)  }$$</p>
+    </div>
+
     <div id="text-classification" class="step" data-x="2000" data-y="0">
         <h1>Text classification</h1>
         <h1>using Naive Bayes</h1>
