Added bayes theorem

--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
         <p class="center">$$P\left( AB \right) =\frac { \left| AB \right|  }{ \left| U \right|  }$$</p>
     </div>
 
-
     <div class="step" data-x="0" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
         <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
          <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
@@ -108,7 +107,14 @@
          </g>
         </svg>
         <p class="center">$$P\left( { A }|{ B } \right) =\frac { \left| AB \right|  }{ \left| B \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| B \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( B \right)  }$$
-          $$P\left( { B }|{ A } \right) =\frac { \left| AB \right|  }{ \left| A \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| A \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( A \right)  }$$</p>
+        $$P\left( { B }|{ A } \right) =\frac { \left| AB \right|  }{ \left| A \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| A \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( A \right)  }$$</p>
+    </div>
+
+    <div class="step" data-x="1000" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
+        <p class="center">$$ P\left( { B }|{ A } \right) =\frac { P\left( AB \right)  }{ P\left( A \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$
+          $$ P\left( { A }|{ B } \right) =\frac { P\left( AB \right)  }{ P\left( B \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { A }|{ B } \right) \cdot P\left( B \right) $$
+          $$ P\left( { A }|{ B } \right) \cdot P\left( B \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$ 
+          $$ P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } $$ </p>
     </div>
 
     <div id="text-classification" class="step" data-x="2000" data-y="0">
