bayes theorem refactoring

--- a/index.html
+++ b/index.html
@@ -110,11 +110,12 @@
         $$P\left( { B }|{ A } \right) =\frac { \left| AB \right|  }{ \left| A \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| A \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( A \right)  }$$</p>
     </div>
 
-    <div class="step" data-x="1000" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
-        <p class="center">$$ P\left( { B }|{ A } \right) =\frac { P\left( AB \right)  }{ P\left( A \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$
+    <div class="step slide" data-x="1000" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
+        <p class="center">Now we have everything we need to derive Bayes’  theorem
+          $$ P\left( { B }|{ A } \right) =\frac { P\left( AB \right)  }{ P\left( A \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$
           $$ P\left( { A }|{ B } \right) =\frac { P\left( AB \right)  }{ P\left( B \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { A }|{ B } \right) \cdot P\left( B \right) $$
-          $$ P\left( { A }|{ B } \right) \cdot P\left( B \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$ 
-          $$ P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } $$ </p>
+          $$ P\left( { A }|{ B } \right) \cdot P\left( B \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$           
+          $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ </p>
     </div>
 
     <div id="text-classification" class="step" data-x="2000" data-y="0">
