--- a/index.html
+++ b/index.html
@@ -118,6 +118,43 @@
           $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ </p>
     </div>
 
+    <div class="step slide" data-x="2000" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
+      <h1>Example</h1>
+      <p>Here's a story problem about a situation that doctors often encounter:</p>
+      <p style="margin-left: 40px">“<strong class="red">1%</strong> of women at age forty who participate in routine screening have breast cancer. <strong class="red">80%</strong> of women with breast cancer will get positive mammographies. <strong class="red">9.6%</strong> of women without breast cancer will also get positive mammographies.  A woman in this age group had a positive mammography in a routine screening. What is the probability that she actually has breast cancer?”</p>
+    </div>
+
+    <div class="step" data-x="3000" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
+       <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:se="http://svg-edit.googlecode.com">
+       <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+       <defs>
+        <marker refY="50" refX="50" markerHeight="5" markerWidth="5" viewBox="0 0 100 100" se_type="rightarrow" orient="auto" markerUnits="strokeWidth" id="se_marker_end_svg_9">
+         <path stroke-width="10" stroke="#000000" fill="#000000" d="m100,50l-100,40l30,-40l-30,-40z"/>
+        </marker>
+        <marker refY="50" refX="50" markerHeight="5" markerWidth="5" viewBox="0 0 100 100" se_type="rightarrow" orient="auto" markerUnits="strokeWidth" id="se_marker_end_svg_7">
+         <path stroke-width="10" stroke="#000000" fill="#000000" d="m100,50l-100,40l30,-40l-30,-40z"/>
+        </marker>
+       </defs>
+       <g>
+        <polyline marker-end="url(#se_marker_end_svg_9)" opacity="0.75" se:connector="svg_8 svg_5" fill="none" stroke-width="2" stroke="#000000" points="258.718 435.5 301.455 355.75 344.191 276" id="svg_9"/>
+        <polyline marker-end="url(#se_marker_end_svg_7)" opacity="0.75" se:connector="svg_6 svg_4" fill="none" stroke-width="2" stroke="#000000" points="155.974 40 173.556 128.5 191.139 217" id="svg_7"/>
+        <circle stroke="#000000" fill-opacity="0" fill="#000000" stroke-width="5" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" cx="329.5" cy="239.49999" r="200" id="svg_1"/>
+        <circle id="svg_2" r="20.12461" cy="249" cx="240" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="2" stroke="#000000" fill="#ff0000" opacity="0.5"/>
+        <circle id="svg_3" r="55.9464" cy="248" cx="283" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="2" stroke="#000000" fill="#7fff00" opacity="0.5"/>
+        <text fill="#ff0000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.5" x="197" y="261" id="svg_4" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">A</text>
+        <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="261" x="360" opacity="0.5" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#00ff00">B</text>
+        <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.75" x="152" y="32" id="svg_6" font-size="35" font-family="serif" text-anchor="middle" xml:space="preserve">womans with cancer</text>
+        <text fill="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.75" x="248" y="467.5" font-size="35" font-family="serif" text-anchor="middle" xml:space="preserve" id="svg_8" stroke="#000000">womans with positive mamogram</text>
+       </g>
+      </svg>
+      <ul>
+        <li>1% of women in the group have breast cancer: <strong class="red">$ P\left( A \right) =0.01 $</strong></li>
+        <li>80% of women with breast cancer get a positive mammogram: <strong class="red">$ P\left( { B }|{ A } \right) =0.8 $</strong></li>
+        <li>9.6% of the women without breast cancer get a positive mammogram too: <strong class="red">$ P\left( { B }|{ \neg A } \right) =0.096 $</strong></li>
+        <li>What is the chance of actually having breast cancer given a positive mammogram? <strong class="red">$ P\left( { A }|{ B } \right) =? $</strong> </li>
+      </ul>      
+    </div>
+
     <div id="text-classification" class="step" data-x="2000" data-y="0">
         <h1>Text classification</h1>
         <h1>using Naive Bayes</h1>
