Added Bayes' formula with full probability of B

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
           $$ P\left( { B }|{ A } \right) =\frac { P\left( AB \right)  }{ P\left( A \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$
           $$ P\left( { A }|{ B } \right) =\frac { P\left( AB \right)  }{ P\left( B \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { A }|{ B } \right) \cdot P\left( B \right) $$
           $$ P\left( { A }|{ B } \right) \cdot P\left( B \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$           
-          $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ </p>
+          $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ 
+          $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot P\left( \neg A \right)  }  } $$ </p>
     </div>
 
     <div class="step slide" data-x="2000" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">
