--- a/index.html
+++ b/index.html
@@ -156,6 +156,27 @@
       </ul>      
     </div>
 
+
+    <div class="step slide" data-x="4000" data-y="-2000" data-z="0" data-rotate="0" data-scale="1">            
+      <h1>Solution</h1>
+      <ul>
+        <li>$ P\left( A \right) =0.01 $</li>
+        <li>$ P\left( { B }|{ A } \right) =0.8 $</li>
+        <li>$ P\left( { B }|{ \neg A } \right) =0.096 $</li>
+      </ul>
+      </br>
+      <p>$P\left( B \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot P\left( \neg A \right)$
+        $=P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot \left( 1-P\left( A \right)  \right)$
+        $=0.8\cdot 0.01+0.096\cdot \left( 1-0.01 \right) $
+        $=0.10304$
+      </p>
+      </br>
+      <p>
+        $P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } =\frac { 0.8\cdot 0.1 }{ 0.10304 } $
+        $=0.7763975155279504$
+      </p>
+    </div>
+
     <div id="text-classification" class="step" data-x="2000" data-y="0">
         <h1>Text classification</h1>
         <h1>using Naive Bayes</h1>
