--- a/index.html
+++ b/index.html
@@ -115,8 +115,13 @@
           $$ P\left( { B }|{ A } \right) =\frac { P\left( AB \right)  }{ P\left( A \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$
           $$ P\left( { A }|{ B } \right) =\frac { P\left( AB \right)  }{ P\left( B \right)  } \quad \Rightarrow \quad P\left( AB \right) =P\left( { A }|{ B } \right) \cdot P\left( B \right) $$
           $$ P\left( { A }|{ B } \right) \cdot P\left( B \right) =P\left( { B }|{ A } \right) \cdot P\left( A \right) $$           
-          $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ 
-          $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot P\left( \neg A \right)  }  } $$ </p>
+          $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ </p>
+    </div>
+
+    <div class="step slide" data-x="1000" data-y="-1500" data-z="-1000" data-rotate="0" data-scale="1">
+        <h1>Bayes Rule</h1>
+        <p class="center">$$\underbrace { P\left( { A }|{ B } \right)  }_{ posterior } =\frac { \overbrace { P\left( { B }|{ A } \right)  }^{ likelihood } \cdot \overbrace { P\left( A \right)  }^{ prior }  }{ \underbrace { P\left( B \right)  }_{ marginal\quad likelihood }  } $$
+          $$ P\left( { B } \right) ={ P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot P\left( \neg A \right)  } $$</p>
     </div>
 
     <div class="step slide" data-x="2000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
@@ -172,8 +177,8 @@
       </p>
       </br>
       <p>
-        $P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } =\frac { 0.8\cdot 0.1 }{ 0.10304 } $
-        $=0.7763975155279504$
+        $P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } =\frac { 0.8\cdot 0.01 }{ 0.10304 } $
+        $=0.07763975155279504$
       </p>
     </div>
 
