text added to solution

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
       </p>
       </br>
       <p>
-        $P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } =\frac { 0.8\cdot 0.01 }{ 0.10304 } $
-        $=0.07763975155279504$
+        $P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } =\frac { 0.8\cdot 0.01 }{ 0.10304 } \approx 0.07763975$
       </p>
+      <p>The chance of actually having breast cancer given a positive mammogram is <strong class="red">7.76%</strong>.</p>
     </div>
 
     <div id="text-classification" class="step" data-x="2000" data-y="0">
