--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
           $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ </p>
     </div>
 
-    <div class="step slide" data-x="1000" data-y="-1500" data-z="-1000" data-rotate="0" data-scale="1">
+    <div class="step slide" data-x="1000" data-y="-2500" data-z="0" data-rotate="0" data-scale="1">
         <h1>Bayes Rule</h1>
         <p class="center">$$\underbrace { P\left( { A }|{ B } \right)  }_{ posterior } =\frac { \overbrace { P\left( { B }|{ A } \right)  }^{ likelihood } \cdot \overbrace { P\left( A \right)  }^{ prior }  }{ \underbrace { P\left( B \right)  }_{ marginal\quad likelihood }  } $$
           $$ P\left( { B } \right) ={ P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot P\left( \neg A \right)  } $$</p>
     </div>
 
     <div class="step slide" data-x="2000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
-      <h1>Example</h1>
+      <h1>Example 1</h1>
       <p>Here's a story problem about a situation that doctors often encounter:</p>
       <p style="margin-left: 40px">“<strong class="red">1%</strong> of women at age forty who participate in routine screening have breast cancer. <strong class="red">80%</strong> of women with breast cancer will get positive mammographies. <strong class="red">9.6%</strong> of women without breast cancer will also get positive mammographies.  A woman in this age group had a positive mammography in a routine screening. What is the probability that she actually has breast cancer?”</p>
     </div>
@@ -163,7 +163,7 @@
 
 
     <div class="step slide" data-x="4000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">            
-      <h1>Solution</h1>
+      <h1>Solution 1</h1>
       <ul>
         <li>$ P\left( A \right) =0.01 $</li>
         <li>$ P\left( { B }|{ A } \right) =0.8 $</li>
@@ -180,6 +180,31 @@
         $P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  } =\frac { 0.8\cdot 0.01 }{ 0.10304 } \approx 0.07763975$
       </p>
       <p>The chance of actually having breast cancer given a positive mammogram is <strong class="red">7.76%</strong>.</p>
+    </div>
+
+    <div class="step slide" data-x="5000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
+      <h1>Example 2</h1>
+      <p>We have two coins, one fair ${ P }_{ 1 }\left( heads \right) =0.5$ and one loaded with ${ P }_{ 2 }\left( heads \right) =1$. We now pick a coin at random with 0.5 chance.</p>
+      <ul>
+        <li>We flip this coin and see “heads”. What is the probability this is loaded coin?</li>
+        <li>We now flip this this coin again (the same coin) and see “heads”. What is now the probability this is the loaded coin?</li>
+      </ul>
+    </div>
+
+    <div class="step slide" data-x="5000" data-y="-3000" data-z="0" data-rotate="-180" data-scale="1">
+      <h1>Solution 2.1</h1>
+      <p>$P\left( { loaded }|{ heads } \right) =\frac { P\left( { heads }|{ loaded } \right) \cdot P\left( loaded \right)  }{ P\left( heads \right)  } =$</p>
+      <p>$=\frac { 1\cdot 0.5 }{ 0.75 } \approx 0.6667$</p>
+      </br>
+      <p>$P(heads)=P\left( { heads }|{ loaded } \right) \cdot P\left( loaded \right) +$
+        $+P\left( { heads }|fair \right) \cdot P\left( fair \right) =$
+        $=1\cdot 0.5+0.5\cdot 0.5=0.75$</p>
+    </div>
+
+    <div class="step slide" data-x="5000" data-y="-3000" data-z="-1000" data-rotate="-180" data-scale="1">
+      <h1>Solution 2.2</h1>
+      <p>$P\left( { loaded }|{ { h }_{ 1 }{ h }_{ 2 } } \right) =\frac { P\left( { { { h }_{ 1 }{ h }_{ 2 } } }|{ loaded } \right) \cdot P\left( loaded \right)  }{ P\left( { { h }_{ 1 }{ h }_{ 2 } } \right)  } =$
+        $=\frac { P\left( { { { h }_{ 1 } } }|{ loaded } \right) \cdot P\left( { { { h }_{ 2 } } }|{ loaded } \right) \cdot P\left( loaded \right)  }{ P\left( { { h }_{ 1 } } \right) \cdot P\left( { { h }_{ 2 } } \right)  } =\frac { 1\cdot 1\cdot 0.5 }{ 0.75\cdot 0.75 } =0.8$</p>
     </div>
 
     <div id="text-classification" class="step" data-x="2000" data-y="0">
