--- a/index.html
+++ b/index.html
@@ -203,8 +203,10 @@
 
     <div class="step slide" data-x="5000" data-y="-3000" data-z="-1000" data-rotate="-180" data-scale="1">
       <h1>Solution 2.2</h1>
-      <p>$P\left( { loaded }|{ { h }_{ 1 }{ h }_{ 2 } } \right) =\frac { P\left( { { { h }_{ 1 }{ h }_{ 2 } } }|{ loaded } \right) \cdot P\left( loaded \right)  }{ P\left( { { h }_{ 1 }{ h }_{ 2 } } \right)  } =$
-        $=\frac { P\left( { { { h }_{ 1 } } }|{ loaded } \right) \cdot P\left( { { { h }_{ 2 } } }|{ loaded } \right) \cdot P\left( loaded \right)  }{ P\left( { { h }_{ 1 } } \right) \cdot P\left( { { h }_{ 2 } } \right)  } =\frac { 1\cdot 1\cdot 0.5 }{ 0.75\cdot 0.75 } =0.8$</p>
+      <p>$P\left( { loaded }|{ { heads }_{ 1 }{ heads }_{ 2 } } \right) =$
+        $=\frac { P\left( { { { heads }_{ 1 }{ heads }_{ 2 } } }|{ loaded } \right) \cdot P\left( loaded \right)  }{ P\left( { { heads }_{ 1 }{ heads }_{ 2 } } \right)  } =$
+        $=\frac { P\left( { { { heads }_{ 1 } } }|{ loaded } \right) \cdot P\left( { { { heads }_{ 2 } } }|{ loaded } \right) \cdot P\left( loaded \right)  }{ P\left( { { heads }_{ 1 } } \right) \cdot P\left( { { heads }_{ 2 } } \right)  } =$
+        $=\frac { 1\cdot 1\cdot 0.5 }{ 0.75\cdot 0.75 } =0.8$</p>
     </div>
 
     <div id="text-classification" class="step" data-x="2000" data-y="0">
