--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
          </g>
         </svg>
         <!-- The default math delimiters are $$...$$ and \[...\] for displayed mathematics, and \(...\) for in-line mathematics.  -->
-        <p class="center">$$P\left( A \right) =\frac { \left| A \right|  }{ \left| U \right|  }$$</p>
+        <p class="center">$$P\left( A \right) =\frac { \left| A \right|  }{ \left| U \right|  }$$
+          $$ P\left( \neg A \right) =1-P\left( A \right) $$</p>
     </div>    
 
     <div class="step" data-x="-2000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
@@ -75,7 +76,8 @@
           <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="311" y="152" id="svg_5" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">U</text>
          </g>
         </svg>
-        <p class="center">$$P\left( B \right) =\frac { \left| B \right|  }{ \left| U \right|  }$$</p>
+        <p class="center">$$P\left( B \right) =\frac { \left| B \right|  }{ \left| U \right|  }$$
+          $$ P\left( \neg B \right) =1-P\left( B \right) $$</p>
     </div>
 
     <div class="step" data-x="-1000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
