Bayes rule extended

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
     <div class="step slide" data-x="1000" data-y="-2500" data-z="0" data-rotate="0" data-scale="1">
         <h1>Bayes Rule</h1>
         <p class="center">$$\underbrace { P\left( { A }|{ B } \right)  }_{ posterior } =\frac { \overbrace { P\left( { B }|{ A } \right)  }^{ likelihood } \cdot \overbrace { P\left( A \right)  }^{ prior }  }{ \underbrace { P\left( B \right)  }_{ marginal\quad likelihood }  } $$
+          $$ P\left( { \neg A }|{ B } \right) =\frac { P\left( { { B } }|\neg A \right) \cdot P\left( \neg A \right)  }{ P\left( B \right)  } $$
+          $$ P\left( { A }|{ B } \right)+P\left( { \neg A }|{ B } \right)=1 $$
           $$ P\left( { B } \right) ={ P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot P\left( \neg A \right)  } $$</p>
     </div>
 
