--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
         <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
          <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
          <g>
-          <title>Layer 1</title>
           <circle stroke="#000000" fill="#ff0000" stroke-width="5" cx="239.49999" cy="245.00002" r="120" id="svg_3" opacity="0.5"/>
           <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="265" x="186" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">A</text>
           <circle id="svg_3" r="150" cy="245.00002" cx="394.49999" stroke-width="5" fill="#007fff" stroke="#000000" opacity="0.5"/>
@@ -110,6 +109,34 @@
         </svg>
         <p class="center">$$P\left( { A }|{ B } \right) =\frac { \left| AB \right|  }{ \left| B \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| B \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( B \right)  }$$
         $$P\left( { B }|{ A } \right) =\frac { \left| AB \right|  }{ \left| A \right|  } =\frac { \frac { \left| AB \right|  }{ \left| U \right|  }  }{ \frac { \left| A \right|  }{ \left| U \right|  }  } =\frac { P\left( AB \right)  }{ P\left( A \right)  }$$</p>
+    </div>
+
+    <div id="independence" class="step" data-x="0" data-y="-3000" data-z="0" data-rotate="-90" data-scale="1">
+        <h1>Independence</h1>
+        <p>A,B independent:</p>
+        <p>$$ P\left( { A }|{ B } \right) =P\left( A \right), \quad P\left( { B }|A \right) =P\left( B \right)$$</p>
+        <p>$$ P\left( { A }|{ B } \right) =\frac { P\left( AB \right)  }{ P\left( B \right)  } =P\left( A \right) $$</p>
+        <p>$$ P\left( AB \right) =P\left( A \right) \cdot P\left( B \right) $$</p>
+    </div>
+
+    <div class="step" data-x="0" data-y="-4500" data-z="0" data-rotate="-90" data-scale="1">      
+        <h1>Example of Independence</h1>
+        <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
+         <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+         <g>          
+          <circle fill="#ffffff" stroke="#000000" stroke-width="5" cx="313.5" cy="241" r="214.73531" id="svg_2"/>
+          <circle stroke="#000000" opacity="0.5" id="svg_3" r="129.78836" cy="241" cx="259" stroke-width="5" fill="#ff0000"/>
+          <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" x="206" y="245" id="svg_5" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">A</text>
+          <circle stroke="#000000" opacity="0.5" fill="#007fff" stroke-width="5" cx="355.49997" cy="241" r="120.78836" id="svg_3"/>
+          <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="245" x="434" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">B</text>
+          <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="245" x="324" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">AB</text>
+          <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="29" id="svg_1" y="309" x="209" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">0.3</text>
+          <text id="svg_4" xml:space="preserve" text-anchor="middle" font-family="serif" font-size="29" y="309" x="316" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">0.3</text>
+          <text id="svg_6" xml:space="preserve" text-anchor="middle" font-family="serif" font-size="29" y="309" x="417" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">0.2</text>
+          <text id="svg_7" xml:space="preserve" text-anchor="middle" font-family="serif" font-size="29" y="418" x="315" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">0.2</text>
+         </g>
+        </svg>
+        <p>$$P\left( A \right) =0.6,\quad P\left( B \right) =0.5\\ P(AB)=0.6\cdot 0.5=0.3$$</p>
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
