--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           $$ \boxed { P\left( { A }|{ B } \right) =\frac { P\left( { B }|{ A } \right) \cdot P\left( A \right)  }{ P\left( B \right)  }  }  $$ </p>
     </div>
 
-    <div class="step slide" data-x="1000" data-y="-2500" data-z="0" data-rotate="0" data-scale="1">
+    <div class="step slide" data-x="1000" data-y="-2500" data-z="0" data-rotate="-90" data-scale="1">
         <h1>Bayes Rule</h1>
         <p class="center">$$\underbrace { P\left( { A }|{ B } \right)  }_{ posterior } =\frac { \overbrace { P\left( { B }|{ A } \right)  }^{ likelihood } \cdot \overbrace { P\left( A \right)  }^{ prior }  }{ \underbrace { P\left( B \right)  }_{ marginal\quad likelihood }  } $$
           $$ P\left( { \neg A }|{ B } \right) =\frac { P\left( { { B } }|\neg A \right) \cdot P\left( \neg A \right)  }{ P\left( B \right)  } $$
@@ -247,8 +247,7 @@
 
     <div id="improving-classification" class="step" data-x="3000" data-y="0">
         <h1>Improving text classification</h1>
-        <h1>using entropy and</h1>
-        <h1>feature selection</h1>
+        <h1>using feature selection</h1>
     </div>
 
     <div id="spelling-correction" class="step" data-x="4000" data-y="0">
