demo slide added

--- a/index.html
+++ b/index.html
@@ -371,12 +371,16 @@
       <p>$$ P\left( { sport }|{ spam } \right) =\frac { 1 + 1 }{ 9 + 12} = \frac { 2 }{ 21 },\quad P\left( { sport }|{ ham } \right) =\frac { 5 + 1 }{ 15 + 12 } =\frac { 2 }{ 9 } $$</p>      
     </div>
 
-    <div class="step" data-x="2000" data-y="12000" data-rotate="90" data-scale="1">
+    <div class="step" data-x="2000" data-y="12000" data-rotate="180" data-scale="1">
       <h1>Houston, we have no problem</h1>
       <p>$$ P\left( { spam }|today,is,secret \right) =? $$</p>
       <p>$$ P\left( today|spam \right) \cdot P\left( is|spam \right) \cdot P\left( secret|spam \right) \cdot P\left( spam \right) =\\ =\frac { 1 }{ 21 } \cdot \frac { 2 }{ 21 } \cdot \frac { 4 }{ 21 } \cdot \frac { 2 }{ 5 } = \frac { 16 }{ 46305 } $$</p>
       <p>$$ P\left( today|ham \right) \cdot P\left( is|ham \right) \cdot P\left( secret|ham \right) \cdot P\left( ham \right) =\\ =\frac { 1 }{ 9 } \cdot \frac { 2 }{ 27 } \cdot \frac { 2 }{ 27 } \cdot \frac { 3 }{ 5 } =\frac { 4 }{ 10935 } $$</p>
       <p>$$ P\left( spam|today,is,secret \right) =\frac { \frac { 16 }{ 46305 } }{ \frac { 16 }{ 46305 } +\frac { 4 }{ 10935 } } = \frac { 324 }{ 667 } $$</p>      
+    </div>
+
+    <div class="step" data-x="2000" data-y="13000" data-rotate="90" data-scale="1">
+      <p><strong class="red">Demo #01</strong></p>
     </div>
 
     <div id="improving-classification" class="step" data-x="3000" data-y="0">
