--- a/index.html
+++ b/index.html
@@ -383,6 +383,10 @@
       <p><strong class="red">Demo #01</strong></p>
     </div>
 
+    <div class="step" data-x="2000" data-y="14000" data-rotate="90" data-scale="1">
+      <h1></h1>
+    </div>
+
     <div id="improving-classification" class="step" data-x="3000" data-y="0">
         <h1>Improving text classification</h1>
         <h1>using feature selection</h1>
@@ -423,6 +427,17 @@ if ("ontouchstart" in document.documentElement) {
 <script>
   var api = impress();
   api.init();
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41629923-1', 'dimchansky.github.io');
+  ga('send', 'pageview');
+
 </script>
 
 </body>
