integral slide added. hiding not used slides.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         </div>        
     </div>
 
+    <div id="integral" class="step" data-x="-6000" data-y="-1500" data-z="0" data-scale="1">
+      <p>$$ \int {  } $$</p>
+      <p>I actually used advanced maths once in my life. I dropped my keys in the toilet, so I had to use a wire shaped as an integral to get them out.</p>
+    </div>
+
     <div id="intuitive-bayes" class="step" data-x="-4000" data-y="-1500" data-z="0" data-scale="1">
         <h1>An Intuitive Explanation of</h1>
         <h1>Bayes' Theorem</h1>
@@ -403,10 +408,10 @@
       <p>$$ { c }_{ map }=\underset { c\in C }{ argmax } \quad \left[ \log { \left( P\left( c \right)  \right) +\sum _{ i=1 }^{ { n }_{ d } }{ \log { \left( P\left( { { w }_{ i } }|{ c } \right)  \right)  }  }  }  \right] $$</p>
     </div>
 
-    <div id="improving-classification" class="step" data-x="4000" data-y="0">
+<!--     <div id="improving-classification" class="step" data-x="4000" data-y="0">
       <h1>Improving text classification</h1>
       <h1>using feature selection</h1>        
-    </div>
+    </div> -->
 
     <div id="spelling-correction" class="step" data-x="6000" data-y="0">
       <h1>Spelling correction</h1>
@@ -448,14 +453,14 @@
 
     </div> 
 
-    <div id="decision-trees" class="step" data-x="8000" data-y="0">
+<!--     <div id="decision-trees" class="step" data-x="8000" data-y="0">
       <h1>Decision Trees —</h1>
       <h1>What Are They?</h1>
     </div>
-    
-    <div id="matrix-decomposition" class="step" data-x="10000" data-y="0">
+ -->    
+<!--     <div id="matrix-decomposition" class="step" data-x="10000" data-y="0">
         <h1>Documents clustering using matrix decompositions</h1>
-    </div>    
+    </div>  -->   
 </div>
 
 <a href="#" onClick="api.goto('title');" class="backToHome">Back to home</a>
