--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div id="integral" class="step" data-x="-6000" data-y="-1500" data-z="0" data-scale="1">
       <p>$$ \int {  } $$</p>
-      <p>I actually used advanced maths once in my life. I dropped my keys in the toilet, so I had to use a wire shaped as an integral to get them out.</p>
+      <p>I actually used advanced maths once in my life. I dropped my keys in the toilet, so I had to use an integral-shaped wire to get them out.</p>
     </div>
 
     <div id="intuitive-bayes" class="step" data-x="-4000" data-y="-1500" data-z="0" data-scale="1">
