further information slides added

--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
         <div class="center"><img src='img/Bayes_Theorem_01.jpg' alt="Bayes' Theorem" width="800" height="auto"></div>
     </div>
 
-    <!-- http://oscarbonilla.com/2009/05/visualizing-bayes-theorem/ 
-         http://yudkowsky.net/rational/bayes -->
     <div class="step" data-x="-3000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
         <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
          <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
@@ -78,7 +76,6 @@
           <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="152" x="311" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000">U</text>
          </g>
         </svg>
-        <!-- The default math delimiters are $$...$$ and \[...\] for displayed mathematics, and \(...\) for in-line mathematics.  -->
         <p class="center">$$P\left( A \right) =\frac { \left| A \right|  }{ \left| U \right|  }$$
           $$ P\left( \neg A \right) =1-P\left( A \right) $$</p>
     </div>    
@@ -460,7 +457,39 @@
  -->    
 <!--     <div id="matrix-decomposition" class="step" data-x="10000" data-y="0">
         <h1>Documents clustering using matrix decompositions</h1>
-    </div>  -->   
+    </div>  -->  
+
+    <div class="step" data-x="12000" data-y="0">
+      <table width="1000px">
+        <tr>
+          <td>
+            <img src="img/further_information.jpg">
+          </td>
+          <td>
+            <ul>
+              <li>S. Russell, P. Norvig. <b>Artificial Intelligence: A Modern Approach</b> (3rd Edition)</li>
+              <li>T. Segaran. <b>Programming Collective Intelligence</b></li>
+              <li>C.D. Manning, P. Raghavan, H. Schütze. <b>Introduction to Information Retrieval</b></li>
+              <li>B. Croft, D. Metzler, T. Strohman. <b>Search Engines: Information Retrieval in Practice</b></li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </div> 
+
+    <div class="step" data-x="12000" data-y="1000">
+      <p>Courses</p>
+      <ul>
+        <li><a href="https://www.udacity.com/">udacity.com</a></li>
+        <li><a href="https://www.udacity.com/course/cs271">udacity: Introduction to Artificial Intelligence</a></li>
+        <li><a href="https://www.udacity.com/course/cs373">udacity: Artificial Intelligence for Robotics</a></li>
+        <li><a href="https://www.coursera.org/courses?orderby=upcoming&cats=cs-ai">coursera.org</a></li>
+        <li><a href="https://www.coursera.org/course/ml">coursera: Machine Learning</a></li>
+        <li><a href="https://www.coursera.org/course/pgm">coursera: Probabilistic Graphical Models</a></li>        
+        <li><a href="https://www.coursera.org/course/neuralnets">coursera: Neural Networks for Machine Learning</a></li>
+      </ul>
+    </div>
+
 </div>
 
 <a href="#" onClick="api.goto('title');" class="backToHome">Back to home</a>
