--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@
 
     <div id="spelling-correction" class="step" data-x="6000" data-y="0">
       <h1>Spelling correction</h1>
-      <h1>using Bayes Theorem</h1>
+      <h1>using Bayes Theorem<sup>*</sup></h1>
+      <span class="footnote"><sup>*</sup> <a href="http://norvig.com/spell-correct.html">P.Norvig: How to Write a Spelling Corrector</a></span>
     </div>
 
     <div class="step" data-x="6000" data-y="1000" data-rotate="0" data-scale="1">
@@ -447,8 +448,32 @@
     </div> 
 
     <div class="step" data-x="6000" data-y="4000" data-rotate="0" data-scale="1">
-
+      <p>The literature on spelling correction claims that 80% to 95% of spelling errors are an edit distance of 1 from the target.</p>
     </div> 
+
+    <div class="step" data-x="6000" data-y="5000" data-rotate="0" data-scale="1">
+      <h1>Model assumptions</h1>
+      <p>All known words of edit distance 1 are infinitely more probable than known words of edit distance 2, and infinitely less probable than a known word of edit distance 0.</p>
+      <p>$$ P\left( { { c }_{ 0 } }|{ w } \right) \gg P\left( { { c }_{ 1 } }|{ w } \right) \gg P\left( { { c }_{ 2 } }|{ w } \right)  $$</p>
+      <p>$$ P\left( { 'word' }|{ 'word' } \right) \gg \\ \gg P\left( { 'world' }|{ 'word' } \right) \gg \\ \gg P\left( 'bored'|{ 'word' } \right)  $$</p>      
+    </div>
+
+    <div class="step" data-x="6000" data-y="6000" data-rotate="0" data-scale="1">
+      <h1>What would Bayes say?</h1>
+      <p>$$ P\left( { { c }_{ 0 } }|{ w } \right) \gg P\left( { { c }_{ 1 } }|{ w } \right) \gg P\left( { { c }_{ 2 } }|{ w } \right)  $$</p>
+      <p>$$ \frac { P\left( { w }|{ { c }_{ 0 } } \right) \cdot P\left( { c }_{ 0 } \right)  }{ P\left( w \right)  } \gg \frac { P\left( { w }|{ { c }_{ 1 } } \right) \cdot P\left( { c }_{ 1 } \right)  }{ P\left( w \right)  } \gg \frac { P\left( { w }|{ { c }_{ 2 } } \right) \cdot P\left( { c }_{ 2 } \right)  }{ P\left( w \right)  }  $$</p>
+      <p>$$ P\left( { w }|{ { c }_{ 0 } } \right) \cdot P\left( { c }_{ 0 } \right) \gg P\left( { w }|{ { c }_{ 1 } } \right) \cdot P\left( { c }_{ 1 } \right) \gg P\left( { w }|{ { c }_{ 2 } } \right) \cdot P\left( { c }_{ 2 } \right) $$</p>
+    </div>
+
+    <div class="step" data-x="6000" data-y="7000" data-rotate="0" data-scale="1">
+      <h1>Correction</h1>
+      <p>$$ \underset { { c }_{ i }\in { E }_{ i }\left( w \right)  }{ argmax } \quad P\left( { { c }_{ i } }|{ w } \right) =\\ =\underset { { c }_{ i }\in { E }_{ i }\left( w \right)  }{ argmax } \quad P\left( { w }|{ c }_{ i } \right) \cdot P\left( { c }_{ i } \right) =\\ =\underset { { c }_{ i }\in { E }_{ i }\left( w \right)  }{ argmax } \quad P\left( { c }_{ i } \right) =\\ =\underset { { c }_{ i }\in { E }_{ i }\left( w \right)  }{ argmax } \quad { N }_{ { c }_{ i } } $$</p>
+      <p>${ E }_{ i }\left( w \right)$ - all known words of edit distance $i$</p>
+    </div>
+
+    <div class="step" data-x="6000" data-y="8000" data-rotate="0" data-scale="1">
+      <p><strong class="red">Demo #02</strong></p>
+    </div>    
 
 <!--     <div id="decision-trees" class="step" data-x="8000" data-y="0">
       <h1>Decision Trees —</h1>
