--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
           $$ P\left( { B } \right) ={ P\left( { B }|{ A } \right) \cdot P\left( A \right) +P\left( { B }|{ \neg A } \right) \cdot P\left( \neg A \right)  } $$</p>
     </div>
 
+    <div class="step" data-x="1000" data-y="-4000" data-z="0" data-rotate="-90" data-scale="1">
+        <p class="center"><img src="img/does_everyone_understand.jpg"></p>
+    </div>
+
     <div class="step slide" data-x="2000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
       <h1>Example 1</h1>
       <p>Here's a story problem about a situation that doctors often encounter:</p>
