some form of elvish added

--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@
       <p>$$ P\left( { e }_{ 1 },e_{ 2 },\dots ,{ e }_{ N } \right) =P\left( { { e }_{ 1 } } \right) \cdot P\left( { { e }_{ 2 } }|{ { e }_{ 1 } } \right) \cdot \dots \cdot P\left( { e_{ N } }|{ e_{ 1 },{ e }_{ 2 },\dots ,{ e }_{ N-1 } } \right) $$</p>
     </div>
 
+    <div class="step" data-x="3500" data-y="3000" data-rotate="0" data-scale="1">
+      <p class="center"><img src="img/some_form_of_elvish.jpg"></p>
+    </div>
+
     <div class="step slide" data-x="2000" data-y="4000" data-rotate="0" data-scale="1">
       <h1>Normalization constant</h1>
       <p>$$ P\left( { { c } }|{ d } \right) =\frac { P\left( { d }|{ c } \right) \cdot P\left( c \right)  }{ P\left( d \right)  } =\alpha \cdot P\left( { d }|{ c } \right) \cdot P\left( c \right) \\ P\left( { { c } }|{ d } \right) \propto P\left( { d }|{ c } \right) \cdot P\left( c \right) $$</p>
