rule of math added

--- a/index.html
+++ b/index.html
@@ -344,6 +344,10 @@
       <p>$$ P\left( spam|secret,sport \right) =\frac { \frac { 1 }{ 72 }  }{ \frac { 1 }{ 72 } +\frac { 1 }{ 72 }  } =\frac { 1 }{ 2 } $$</p>
     </div>    
 
+    <div class="step" data-x="3500" data-y="8000" data-rotate="0" data-scale="1">
+      <p class="center"><img src="img/rule_of_math.jpg"></p>
+    </div>
+
     <div class="step" data-x="2000" data-y="9000" data-rotate="0" data-scale="1">
       <h1>Houston, we have a problem</h1>
       <p>$$ P\left( { spam }|today,is,secret \right) =? $$</p>
