fixed text error

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         <circle id="svg_3" r="55.9464" cy="248" cx="283" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="2" stroke="#000000" fill="#7fff00" opacity="0.5"/>
         <text fill="#ff0000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.5" x="197" y="261" id="svg_4" font-size="43" font-family="serif" text-anchor="middle" xml:space="preserve">A</text>
         <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="43" id="svg_5" y="261" x="360" opacity="0.5" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#00ff00">B</text>
-        <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.75" x="152" y="32" id="svg_6" font-size="35" font-family="serif" text-anchor="middle" xml:space="preserve">womans with cancer</text>
-        <text fill="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.75" x="248" y="467.5" font-size="35" font-family="serif" text-anchor="middle" xml:space="preserve" id="svg_8" stroke="#000000">womans with positive mammogram</text>
+        <text fill="#000000" stroke="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.75" x="152" y="32" id="svg_6" font-size="35" font-family="serif" text-anchor="middle" xml:space="preserve">women with cancer</text>
+        <text fill="#000000" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" opacity="0.75" x="248" y="467.5" font-size="35" font-family="serif" text-anchor="middle" xml:space="preserve" id="svg_8" stroke="#000000">women with positive mammogram</text>
        </g>
       </svg>
       <ul>
