need attention slide

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       <p>I actually used advanced maths once in my life. I dropped my keys in the toilet, so I had to use an integral-shaped wire to get them out.</p>
     </div>
 
+    <div class="step" data-x="-6000" data-y="-3500" data-z="0" data-scale="1">
+      <h1>I need your attention</h1>
+      <p class="center"><img src="img/me_in_class.jpg"></p>
+    </div>
+
     <div id="intuitive-bayes" class="step" data-x="-4000" data-y="-1500" data-z="0" data-scale="1">
         <h1>An Intuitive Explanation of</h1>
         <h1>Bayes' Theorem</h1>
