--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
         <div class="center"><img src='img/Bayes_Theorem_01.jpg' alt="Bayes' Theorem" width="800" height="auto"></div>
     </div>
 
+    <div class="step" data-x="-4000" data-y="-1500" data-z="-1000" data-scale="1">
+        <p class="center"><img src="img/the_biggest_lie.jpg"></p>
+    </div>
+
     <div class="step" data-x="-3000" data-y="-1500" data-z="0" data-rotate="0" data-scale="1">
         <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg">
          <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
