--- a/index.html
+++ b/index.html
@@ -71,7 +71,18 @@
         <div class="center"><img src='img/Bayes_Theorem_01.jpg' alt="Bayes' Theorem" width="800" height="auto"></div>
     </div>
 
-    <div class="step" data-x="-4000" data-y="-3500" data-z="0" data-scale="1">
+    <div class="step slide" data-x="-4000" data-y="-3500" data-z="0" data-scale="1">
+        <p>“Ye shall know them by their fruits. Do men gather grapes of thorns, or figs of thistles?”</p>
+        <p class="right">Matthew 7:16</p>
+        <br />
+        <p>“Jūs pažinsite juos iš vaisių. Argi kas gali priskinti vynuogių nuo erškėčių ar figų nuo usnių?!”</p>
+        <p class="right">Mato 7:16</p>
+        <br />
+        <p>“По плодам их узнаете их. Собирают ли с терновника виноград, или с репейника смоквы?”</p>
+        <p class="right">От Матфея 7:16</p>
+    </div>
+
+    <div class="step" data-x="-4000" data-y="-5500" data-z="0" data-scale="1">
         <p class="center"><img src="img/the_biggest_lie.jpg"></p>
     </div>
 
