--- a/index.html
+++ b/index.html
@@ -72,14 +72,15 @@
     </div>
 
     <div class="step slide" data-x="-4000" data-y="-3500" data-z="0" data-scale="1">
-        <p>“Ye shall know them by their fruits. Do men gather grapes of thorns, or figs of thistles?”</p>
-        <p class="right">Matthew 7:16</p>
-        <br />
-        <p>“Jūs pažinsite juos iš vaisių. Argi kas gali priskinti vynuogių nuo erškėčių ar figų nuo usnių?!”</p>
-        <p class="right">Mato 7:16</p>
-        <br />
-        <p>“По плодам их узнаете их. Собирают ли с терновника виноград, или с репейника смоквы?”</p>
-        <p class="right">От Матфея 7:16</p>
+      <h1>An Intuitive Explanation</h1>
+      <p>“Ye shall know them by their fruits. Do men gather grapes of thorns, or figs of thistles?”</p>
+      <p class="right">Matthew 7:16</p>
+      <br />
+      <p>“Jūs pažinsite juos iš vaisių. Argi kas gali priskinti vynuogių nuo erškėčių ar figų nuo usnių?!”</p>
+      <p class="right">Mato 7:16</p>
+      <br />
+      <p>“По плодам их узнаете их. Собирают ли с терновника виноград, или с репейника смоквы?”</p>
+      <p class="right">От Матфея 7:16</p>
     </div>
 
     <div class="step" data-x="-4000" data-y="-5500" data-z="0" data-scale="1">
